# Wasteland3

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  readme.md
Files/: build-bin-to-json.bat  (+2 more)
Source/: CMakeLists.txt
Source/Common/: CMakeLists.txt  bidirectionalMap.hpp  common.hpp  distribution.hpp  exception.cpp  exception.hpp  flatbuffersAux.hpp  flatbuffersConverter.hpp  operators.hpp  point.hpp  slot.hpp  specStorage.hpp  swap.hpp
Source/Common/FlatBuffersAux/: CMakeLists.txt  flatbuffersAux.cpp  flatbuffersAux.hpp  flatbuffersAuxDefine.hpp  flatbuffersAuxDefine.hpp.in  flatbuffersLanguageBundle.cpp  flatbuffersLanguageBundle.hpp
Source/Common/FlatBuffersCommon/: CMakeLists.txt  ammoFB.fbs  ammoFB_generated.h  ammoTypeFB.fbs  ammoTypeFB_generated.h  attackFB.fbs  attackFB_generated.h  attributeFB.fbs  attributeFB_generated.h  attributeSerializationFB.fbs  attributeSerializationFB_generated.h  attributeTypeFB.fbs  attributeTypeFB_generated.h  characterFB.fbs  characterFB_generated.h  characterModelFB.fbs  characterModelFB_generated.h  characterTypeFB.fbs  characterTypeFB_generated.h  damageTypeFB.fbs  damageTypeFB_generated.h  gameFB.fbs  gameFB_generated.h  inventoryFB.fbs  inventoryFB_generated.h  itemFB.fbs  itemFB_generated.h  languageBundleFB.fbs  languageBundleFB_generated.h  skillFB.fbs  skillFB_generated.h  skillSerializationFB.fbs  skillSerializationFB_generated.h  skillTypeFB.fbs  skillTypeFB_generated.h  squadFB.fbs  squadFB_generated.h  unitFB.fbs  unitFB_generated.h  weaponFB.fbs  (+11 more)
Source/Common/ImGui/: CMakeLists.txt
Source/Common/Observer/: CMakeLists.txt  delegate.hpp  delegateDLL.hpp  observerDLL.hpp  observerEnum.hpp
Source/Error/: CMakeLists.txt  error.cpp  error.hpp
Source/Factory/: CMakeLists.txt  factory.cpp  factory.hpp
Source/Initialization/: CMakeLists.txt  initialization.cpp  initialization.hpp
Source/Locator/: CMakeLists.txt  locator.cpp  locator.hpp
Source/Main/: CMakeLists.txt  graphicUI.cpp  graphicUI.hpp  initialization.cpp  initialization.hpp  initializationAux.cpp  initializationAux.hpp  main.cpp  textUI.cpp  textUI.hpp
Source/Menu/: CMakeLists.txt  gui_menuCommon.cpp  gui_menuCommon.hpp  menuCommon.cpp  menuCommon.hpp  menuCommonText.cpp  menuCommonText.hpp
Source/Menu/AttributeMenu/: gui_menuAttribute.cpp  gui_menuAttribute.hpp  menuAttribute.cpp  menuAttribute.hpp  menuAttributeText.cpp  menuAttributeText.hpp
Source/Menu/CharacterMenu/: menuCharacter.cpp  menuCharacter.hpp  menuCharacterText.cpp  menuCharacterText.hpp
Source/Menu/GeneralMenu/: gui_menuGeneral.cpp  gui_menuGeneral.hpp
Source/Menu/InventoryMenu/: gui_menuInventory.cpp  gui_menuInventory.hpp  menuInventory.cpp  menuInventory.hpp  menuInventoryText.cpp  menuInventoryText.hpp
Source/Menu/ItemMenu/: gui_menuItem.cpp  gui_menuItem.hpp  itemVisitorExtendedName.cpp  itemVisitorExtendedName.hpp  itemVisitorFullDescr.cpp  itemVisitorFullDescr.hpp  itemVisitorNameType.cpp  itemVisitorNameType.hpp  menuItem.cpp  menuItem.hpp  menuItemCommon.cpp  menuItemCommon.hpp  menuItemModify.cpp  menuItemModify.hpp  menuItemText.cpp  menuItemText.hpp
Source/Menu/MainMenu/: CMakeLists.txt  gui_menuMain.cpp  gui_menuMain.hpp  menuAttribute.cpp  menuAttribute.hpp  menuCommon.cpp  menuCommon.hpp  menuMain.cpp  menuMain.hpp  menuMainAux.hpp  menuMainAux.hpp.in  menuMainInit.cpp  menuMainInit.hpp  menuMainText.cpp  menuMainText.hpp  menuOption.cpp  menuOption.hpp  menuSkill.cpp  menuSkill.hpp
Source/Menu/OptionMenu/: gui_menuOptions.cpp  gui_menuOptions.hpp  menuOption.cpp  menuOption.hpp  menuOptions.cpp  menuOptions.hpp  menuOptionsText.cpp  menuOptionsText.hpp
Source/Menu/SkillMenu/: gui_menuSkill.cpp  gui_menuSkill.hpp  menuSkill.cpp  menuSkill.hpp  menuSkillText.cpp  menuSkillText.hpp
Source/Menu/SquadMenu/: menuSquad.cpp  menuSquad.hpp  menuSquadText.cpp  menuSquadText.hpp
Source/Object/: CMakeLists.txt
Source/Object/Destroyable/: CMakeLists.txt  destroyable.cpp  destroyable.hpp
Source/Object/Effect/: CMakeLists.txt  effect.cpp  effect.hpp  effectCommon.hpp  effectVisitor.hpp
Source/Object/Effect/Attribute/: effectAttribute.cpp  effectAttribute.hpp
Source/Object/Effect/Level/: effectAttribute.cpp  effectAttribute.hpp
Source/Object/Effect/Skill/: effectSkill.cpp  effectSkill.hpp
Source/Object/Inventory/: CMakeLists.txt  inventory.cpp  inventory.hpp
Source/Object/Item/: CMakeLists.txt  item.cpp  item.hpp  itemCommon.cpp  itemCommon.hpp  itemVisitor.hpp  itemVisitorFullDescr.cpp  itemVisitorFullDescr.hpp  itemVisitorType.hpp
Source/Object/Item/Ammo/: CMakeLists.txt  ammo.cpp  ammo.hpp  ammoCommon.cpp  ammoCommon.hpp  ammoPath.hpp  ammoPath.hpp.in  ammoReference.cpp  ammoReference.hpp  ammoReferenceFB.fbs  ammoReferenceFB.fbs.in  ammoReferenceFB_generated.h  ammoText.cpp  ammoText.hpp  ammoTextFB.fbs  ammoTextFB.fbs.in  ammoTextFB_generated.h
Source/Object/Item/Armor/: armor.cpp  armor.hpp  armorCommon.hpp
Source/Object/Item/Attack/: CMakeLists.txt  attack.cpp  attack.hpp  attackCommon.cpp  attackCommon.hpp  attackPath.hpp  attackPath.hpp.in  attackReferenceFB.fbs  attackReferenceFB.fbs.in  attackReferenceFB_generated.h  attackText.cpp  attackText.hpp  attackTextFB.fbs  attackTextFB.fbs.in  attackTextFB_generated.h
Source/Object/Squad/: CMakeLists.txt  squad.cpp  squad.hpp
Source/Object/Unit/: CMakeLists.txt  unit.cpp  unit.hpp  unitCommon.hpp  unitVisitor.hpp
Source/Option/: CMakeLists.txt  option.cpp  option.hpp
Source/Options/: CMakeLists.txt  generateSchemaHeader.cmake  options.cpp  options.hpp  optionsAux.cpp  optionsAux.hpp  optionsFB.fbs  optionsFB.fbs.in  optionsFBSchema.hpp  optionsFB_generated.h  optionsPath.hpp  optionsPath.hpp.in
Source/PlainText/: CMakeLists.txt  plainText.cpp  plainText.hpp  plainTextBase.cpp  plainTextBase.hpp  plainTextCommon.hpp  plainTextEnum.hpp  plainTextPath.hpp  plainTextPath.hpp.in  plainTextText.cpp  plainTextText.hpp  plainTextTextFB.fbs  plainTextTextFB.fbs.in  plainTextTextFB_generated.h
Source/PlainText/data/: plainTextTextFB.bundle  plainTextTextFB.json
(+162 files in other folders)
